# computer-checks

./: .clang-format  .gitignore  CMakeLists.txt  FORMAT.md  LICENSE  README.md  enum_all_bad_cartwheels.sh  enum_possible_bad_wheels.sh
src/: CMakeLists.txt  cartwheel.cpp  cartwheel.hpp  combine_cartwheel.cpp  combine_cartwheel.hpp  configuration.cpp  configuration.hpp  degree.cpp  degree.hpp  main.cpp  mapping.cpp  mapping.hpp  pseudo_configuration.cpp  pseudo_configuration.hpp  pseudo_triangulation.cpp  pseudo_triangulation.hpp  rule.cpp  rule.hpp  util.hpp
test/: CMakeLists.txt  cartwheel_test.cpp  common.hpp  configuration_test.cpp  degree_test.cpp  pseudo_configuration_test.cpp  pseudo_triangulation_test.cpp  rule_test.cpp
